reset p and li tag line height, fix color contrast tool iframe

--- a/_sass/sgds-base/_sgds-typography.scss
+++ b/_sass/sgds-base/_sgds-typography.scss
@@ -59,8 +59,6 @@ h6{
 
 p,li{
   font-size: $size-6;
-  line-height: 2rem;
-
 }
 
 small{
